objects/Case_QA_Question__c.object
<CustomObject>
    <description>RN - CloudSmiths - QA questions with weightings related to a specific QA template</description>
    <fields>
        <fullName>Heading__c</fullName>
        <description>RN - CloudSmiths - QA question heading</description>
        <label>Heading</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAuditRequirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RN - CloudSmiths 
Audit critical question</description>
        <inlineHelpText>Check this if this question is an audit critical question. Should an agent score zero (0) for this question the complete QA evaluation for that agent will fail.</inlineHelpText>
        <label>Is Audit Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAQuestion__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QATemplate__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>QA Template</label>
        <referenceTo>Case_QA_Template__c</referenceTo>
        <relationshipLabel>QA Questions</relationshipLabel>
        <relationshipName>QA_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <defaultValue>0</defaultValue>
        <description>RN - CloudSmiths - The weighting of the specific question</description>
        <inlineHelpText>The weighting of the specific question</inlineHelpText>
        <label>Weighting</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case QA Question</label>
    <listViews>
        <fullName>Detailed_View</fullName>
        <columns>NAME</columns>
        <columns>QATemplate__c</columns>
        <columns>Heading__c</columns>
        <columns>QAQuestion__c</columns>
        <columns>Weighting__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed View</label>
    </listViews>
    <nameField>
        <displayFormat>QAQ-{000000000}</displayFormat>
        <label>Case QA Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case QA Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>